--- a/templates/administrador/crudCania.html
+++ b/templates/administrador/crudCania.html
@@ -56,8 +56,8 @@
                         <td>{{resultado.verde}}</td>
                         <td>{{resultado.azul}}</td>
                         <td>
-                          <a href="/llenarEditarUsuario/{{resultado.idResultado}}" class="btn btn-secondary">Editar</a>
-                          <a href="/eliminarUsuario/{{resultado.idResultado}}" class="btn btn-danger btn-delete">Eliminar</a>
+                          <a href="/llenarEditarExp/{{resultado.idResultado}}" class="btn btn-secondary">Editar</a>
+                          <a href="/eliminarExp/{{resultado.idResultado}}" class="btn btn-danger btn-delete">Eliminar</a>
                         </td>
                       </tr>
                       {% endfor %}
