--- a/templates/administrador/home.html
+++ b/templates/administrador/home.html
@@ -21,7 +21,12 @@
 	   <button class="myButton" type="submit">Generar reporte</button>
    </center> 
 </form>
-
+<br><br><br>
+<form method="POST"  action="/logout" >  
+	<center>
+	   <button class="myButton" type="submit">Cerrar sesión</button>
+   </center> 
+</form>
   <style>
   body {
   background: #2c3e50;  /* fallback for old browsers */
