--- a/templates/administrador/editarUsuario.html
+++ b/templates/administrador/editarUsuario.html
@@ -6,12 +6,15 @@
       <div class="card card-body">
         <form action="/editarUsuario" method="POST">
           <div class="form-group">
+            <p>ID usuario</p>
             <input type="text" name="id" value="{{usuario.idUsuario}}" class="form-control" readonly>
           </div>
           <div class="form-group">
+              <p>Nombre de usuario</p>
             <input type="text" name="nombre" value="{{usuario.nombreUsuario}}" class="form-control" required>
           </div>
           <div class="form-group">
+              <p>Tipo</p>
             <input type="text" name="tipo" value="{{usuario.tipo}}" class="form-control" required>
           </div>
           <div class="form-group">
