--- a/templates/administrador/home.html
+++ b/templates/administrador/home.html
@@ -13,10 +13,11 @@
 <br><br><br>
  <form method="POST" action="/crudCania">
 	 <center>
-<button class="myButton">Hacer experimentación</button>
+		<button class="myButton">Hacer experimentación</button>
 </center>
+ </form>
 <br><br><br>
-<form method="POST"  action="/generaRep" >  
+<form method="POST"  action="/agregaRep" >  
 	<center>
 	   <button class="myButton" type="submit">Generar reporte</button>
    </center> 
@@ -26,7 +27,7 @@
 	<center>
 	   <button class="myButton" type="submit">Cerrar sesión</button>
    </center> 
-</form>
+ </form>
   <style>
   body {
   background: #2c3e50;  /* fallback for old browsers */
