--- a/templates/administrador/editarUsuario.html
+++ b/templates/administrador/editarUsuario.html
@@ -21,6 +21,7 @@
             <button type="submit" class="btn btn-primary btn-block">
               Actualizar
             </button>
+            <a class="btn btn-primary btn-block" href="/crudUsuario" style="background: red;">Cancelar</a>
           </div>
         </form>
       </div>
