--- a/templates/administrador/fechaR.html
+++ b/templates/administrador/fechaR.html
@@ -21,6 +21,12 @@
 	   <button class="myButton" type="submit">Generar reporte semanal</button>
    </center> 
  </form>
+ <br><br><br>
+ <form   action="/homeAdmin" >  
+	<center>
+	   <button class="myButton" type="submit">Regresar</button>
+   </center> 
+ </form>
   <style>
   body {
   background: #2c3e50;  /* fallback for old browsers */
