--- a/templates/usuario/fechaR.html
+++ b/templates/usuario/fechaR.html
@@ -5,6 +5,7 @@
 	<title>Página principal</title>
 </head>
 <body>
+	
 		<center><h1 style="color: antiquewhite;">Sistema para extracción de las características de la caña de azúcar
 			</h1></center>
 <br><br><br>
@@ -19,6 +20,11 @@
 	<center>
         <input type="date" name="fechaS" id="fechaS">
 	   <button class="myButton" type="submit">Generar reporte semanal</button>
+   </center> 
+ </form>
+ <form   action="/homeUs" >  
+	<center>
+	   <button class="myButton" type="submit">Regresar</button>
    </center> 
  </form>
   <style>
