--- a/templates/usuario/reporte.html
+++ b/templates/usuario/reporte.html
@@ -53,7 +53,7 @@
      </tbody>
    </table>
    <nav><a href="{{ url_for('generarPDF', resultados=resultados) }}">Obtener el pdf(por favor da clic derecho a este enlace y abre en una nueva pestaña)</a></nav>
-   <nav><a href="{{ url_for('homeUs' }}">Volver a la página principal</a></nav>
+   <nav><a href="{{ url_for('homeUs') }}">Volver a la página principal</a></nav>
    <footer>{{fecha}}</footer> 
 </body>
 </html>
